# QuantF

./: .gitignore  README.md  README.zh-CN.md  pyproject.toml
Requst/: v1-1_gpt_upgraderequest.md  v1-2_agent_research_requirements.md
configs/: alerts.yaml  portfolio.example.yaml  tracked_assets.json  watchlist.yaml
docs/: implementation-and-open-source-options.md  long-term-us-equity-quant-system.md  quant-trading-overview.md  量化交易知识梳理_20260625_openclaw_deepseedv4f.md
docs/Agent_forcast_file/workbuddy/: requst_log_260626.md  requst_log_260626_2.md  美股量化研究报告_2026-06-25.md
src/quantf/: cli.py  config.py
src/quantf/alerts/: rules.py
src/quantf/app/: streamlit_app.py
src/quantf/data/: pipeline.py  prices.py  provider_factory.py  quality.py  raw.py
src/quantf/data/providers/: __init__.py  alpha_vantage.py  base.py  polygon.py  yahoo.py
src/quantf/db/: connection.py  schema.py
src/quantf/events/: engine.py
src/quantf/indicators/: trend.py
src/quantf/market/: regime.py
src/quantf/portfolio/: allocation.py  holdings.py  service.py
tests/: test_alerts.py  test_data_quality.py  test_events.py  test_indicators.py
