[project]
name = "quantf"
version = "0.1.0"
description = "A lightweight long-term US equity monitoring system."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "duckdb>=1.0.0",
  "pandas>=2.2.0",
  "plotly>=5.22.0",
  "pyyaml>=6.0.0",
  "streamlit>=1.36.0",
  "yfinance>=0.2.40",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
quantf = "quantf.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
